--- a/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/src/main/res/layout/content_forgot_password.xml
@@ -12,37 +12,84 @@
     tools:mContext="co.loystar.loystarbusiness.activities.ForgotPasswordActivity"
     tools:showIn="@layout/activity_forgot_password">
 
-    <TextView
-        android:id="@+id/reset_pass_header_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/reset_pass_header_text"/>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/email_wrapper"
+    <LinearLayout
+        android:id="@+id/password_reset_email_progress"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/reset_pass_header_text"
-        android:layout_height="wrap_content">
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true">
 
-        <EditText
-            android:id="@+id/email"
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/prompt_email"
-            android:inputType="textEmailAddress"
-            android:maxLines="1" />
+            android:indeterminate="true"
+            android:max="100"
+            android:minHeight="50dp"
+            android:minWidth="200dp" />
 
-    </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="@string/pwd_reset_msg"/>
 
-    <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
-        android:layout_below="@+id/email_wrapper"
-        android:id="@+id/submit"
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/reset_password_email_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/submit"
-        android:layout_marginTop="30dp"
-        android:textSize="@dimen/login_button_text_size" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/reset_pass_header_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/reset_pass_header_text"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/email_wrapper"
+                android:layout_width="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:clickable="true"
+                android:layout_marginTop="10dp"
+                android:id="@+id/i_have_code"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_width="wrap_content"
+                android:textSize="@dimen/text_size_small"
+                android:text="@string/i_have_code_already"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end" />
+
+            <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
+                android:id="@+id/submit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/submit"
+                android:layout_marginTop="30dp"
+                android:textSize="@dimen/login_button_text_size" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
