--- a/app/src/main/res/layout/content_merchant_login.xml
+++ b/app/src/main/res/layout/content_merchant_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,98 +8,125 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:mContext="co.loystar.loystarbusiness.activities.MerchantLoginActivity"
     tools:showIn="@layout/activity_merchant_login">
 
     <LinearLayout
-        android:id="@+id/email_login_form"
+        android:id="@+id/login_progress"
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:visibility="gone"
+        android:layout_centerInParent="true">
 
-        <LinearLayout
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:layout_width="0px"
-            android:layout_height="0px"/>
-
-        <android.support.design.widget.TextInputLayout
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <AutoCompleteTextView
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:nextFocusUp="@id/email"
-                android:nextFocusLeft="@id/email"/>
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:id="@+id/passwordLayout"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
-
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp" />
 
         <TextView
-            android:clickable="true"
-            android:layout_marginTop="10dp"
-            android:id="@+id/forgot_password"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:textSize="@dimen/text_size_small"
-            android:text="@string/forgot_password"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end" />
-
-        <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
-            android:id="@+id/email_sign_in_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/login_button_margin_top"
-            android:text="@string/action_sign_in_short"
-            android:textSize="@dimen/login_button_text_size" />
-
-        <RelativeLayout
-            android:layout_marginTop="40dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
-
-            <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonTransparent
-                android:id="@+id/sign_up_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/login_button_margin_top"
-                android:layout_marginBottom="@dimen/login_button_margin_bottom"
-                android:text="@string/sign_up_btn_text"
-                android:textColor="@color/grayish_blue"
-                android:textSize="@dimen/login_button_text_size"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
-
-        </RelativeLayout>
+            android:textAlignment="center"
+            android:text="@string/signing_in_msg"/>
 
     </LinearLayout>
 
-</ScrollView>
+    <ScrollView
+        android:id="@+id/email_login_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <View
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_width="0px"
+                android:layout_height="0px"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <AutoCompleteTextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:nextFocusUp="@id/email"
+                    android:nextFocusLeft="@id/email"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/passwordLayout"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password"
+                    android:imeActionId="@+id/login"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="textPassword"
+                    android:maxLines="1" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <TextView
+                android:clickable="true"
+                android:layout_marginTop="10dp"
+                android:id="@+id/forgot_password"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_width="wrap_content"
+                android:textSize="@dimen/text_size_small"
+                android:text="@string/forgot_password"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end" />
+
+            <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
+                android:id="@+id/email_sign_in_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/login_button_margin_top"
+                android:text="@string/action_sign_in_short"
+                android:textSize="@dimen/login_button_text_size" />
+
+            <RelativeLayout
+                android:layout_marginTop="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonTransparent
+                    android:id="@+id/sign_up_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/login_button_margin_top"
+                    android:layout_marginBottom="@dimen/login_button_margin_bottom"
+                    android:text="@string/sign_up_btn_text"
+                    android:textColor="@color/grayish_blue"
+                    android:textSize="@dimen/login_button_text_size"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
+
+</RelativeLayout>
