--- a/app/src/main/res/layout/content_authenticator_activity.xml
+++ b/app/src/main/res/layout/content_authenticator_activity.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end" />
 
-            <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
+            <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
                 android:id="@+id/email_sign_in_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
