--- a/app/src/main/res/layout-w600dp/content_merchant_back_office.xml
+++ b/app/src/main/res/layout-w600dp/content_merchant_back_office.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="co.loystar.loystarbusiness.activities.MerchantBackOfficeActivity"
     tools:showIn="@layout/activity_merchant_back_office">
 
+    <com.roughike.bottombar.BottomBar
+        android:id="@+id/bottom_navigation_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        app:bb_tabXmlResource="@xml/bottom_bar_tabs"
+        app:bb_tabletMode="true" />
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation_bar"
+        android:layout_toEndOf="@+id/bottom_navigation_bar"
+        android:layout_toRightOf="@+id/bottom_navigation_bar"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -42,14 +51,6 @@
 
         </android.support.v7.widget.CardView>
 
-
     </RelativeLayout>
-
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottom_navigation_bar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        app:bb_tabXmlResource="@xml/bottom_bar_tabs" />
 
 </RelativeLayout>
