--- a/app/src/main/res/layout/activity_merchant_back_office.xml
+++ b/app/src/main/res/layout/activity_merchant_back_office.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/merchant_back_office_wrapper"
     tools:context="co.loystar.loystarbusiness.activities.MerchantBackOfficeActivity">
 
     <android.support.design.widget.AppBarLayout
