--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,9 @@
     <dimen name="text_size_medium">14sp</dimen>
     <dimen name="text_size_large">18sp</dimen>
 
+    <dimen name="empty_state_text_title">20sp</dimen>
+    <dimen name="chart_padding">5dp</dimen>
+
     <!-- login -->
     <dimen name="login_button_margin_top">10dp</dimen>
     <dimen name="login_button_margin_bottom">20dp</dimen>
