--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,7 @@
     <dimen name="login_button_margin_top">10dp</dimen>
     <dimen name="login_button_margin_bottom">20dp</dimen>
     <dimen name="login_button_text_size">25sp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="item_width">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
