--- a/app/src/main/res/menu/menu_customer_list_activity.xml
+++ b/app/src/main/res/menu/menu_customer_list_activity.xml
@@ -14,6 +14,6 @@
 
     <item android:id="@+id/download_customer_list"
         android:icon="@drawable/ic_cloud_download_white_48px"
-        android:title="@string/download_customer_list"
+        android:title="@string/export_list"
         app:showAsAction="collapseActionView" />
 </menu>
