--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,8 @@
 
     <dimen name="empty_state_text_title">20sp</dimen>
     <dimen name="chart_padding">5dp</dimen>
-
+    <dimen name="item_space_extra">25dp</dimen>
+    <dimen name="item_space_medium">15dp</dimen>
     <!-- login -->
     <dimen name="login_button_margin_top">10dp</dimen>
     <dimen name="login_button_margin_bottom">20dp</dimen>
