--- a/app/src/main/res/layout/content_add_new_customer.xml
+++ b/app/src/main/res/layout/content_add_new_customer.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content">
 
             <co.loystar.loystarbusiness.utils.ui.buttons.AddCustomerButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/add_customer_from_contacts"
                 android:text="@string/add_customer_from_contacts"/>
@@ -80,7 +80,7 @@
 
                 </LinearLayout>
 
-                <co.loystar.loystarbusiness.utils.ui.IntlPhoneInput.IntlPhoneInput
+                <co.loystar.loystarbusiness.utils.ui.InternationalPhoneInput.InternationalPhoneInput
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/customer_phone_from_contacts" />
@@ -241,10 +241,10 @@
 
             </LinearLayout>
 
-            <!--<co.loystar.loystarbusiness.utils.ui.IntlPhoneInput.IntlPhoneInput
+            <co.loystar.loystarbusiness.utils.ui.InternationalPhoneInput.InternationalPhoneInput
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/customer_phone" />-->
+                android:id="@+id/customer_phone"/>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/user_email_wrapper"
@@ -301,46 +301,39 @@
                 </RadioGroup>
             </RelativeLayout>
 
-            <RelativeLayout
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp">
 
                 <TextView
-                    android:id="@+id/dob_header"
+                    android:id="@+id/date_of_birth_label_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/date_of_birth"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_marginBottom="5dp"/>
+                    android:textSize="18sp"
+                    android:layout_marginBottom="10dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"/>
 
-                <RelativeLayout
-                    android:id="@+id/date_picker_bloc"
-                    android:layout_below="@+id/dob_header"
+                <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
+                    android:id="@+id/date_of_birth_spinner_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <co.loystar.loystarbusiness.utils.ui.Buttons.SpinnerButton
-                        android:id="@+id/select_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/select_date"
-                        android:textStyle="bold"/>
-
-                </RelativeLayout>
+                    android:layout_marginBottom="20dp"
+                    android:prompt="@string/select_date"
+                    android:entries="@array/empty_select"/>
 
                 <TextView
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/date_picker_bloc"
                     android:text="@string/birth_date_field_reason"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"/>
 
-            </RelativeLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
