--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="chart_padding">5dp</dimen>
     <dimen name="item_space_extra">25dp</dimen>
     <dimen name="item_space_medium">15dp</dimen>
+    <dimen name="card_list_padding">16dp</dimen>
     <!-- login -->
     <dimen name="login_button_margin_top">10dp</dimen>
     <dimen name="login_button_margin_bottom">20dp</dimen>
