--- a/app/src/main/res/layout-w900dp/customer_detail.xml
+++ b/app/src/main/res/layout-w900dp/customer_detail.xml
@@ -29,7 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Laud Bruce-Tagoe"
             android:gravity="start"
             app:layout_constraintEnd_toStartOf="@+id/editCustomerDetailBtn"
             app:layout_constraintHorizontal_bias="0.5"
@@ -73,24 +72,31 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="220dp" />
 
-    <TextView
-        android:id="@+id/lastVisitLabel"
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/lastVisitWrapper"
+        android:visibility="gone"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/last_visit"
-        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topGuideLine" />
+        app:layout_constraintTop_toBottomOf="@+id/topGuideLine">
 
-    <TextView
-        android:id="@+id/lastVisitValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/lastVisitLabel"
-        app:layout_constraintTop_toTopOf="@+id/lastVisitLabel" />
+        <TextView
+            android:id="@+id/lastVisitLabel"
+            android:text="@string/last_visit"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBaseline_toBaselineOf="@+id/lastVisitValue" />
+
+        <TextView
+            android:id="@+id/lastVisitValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginLeft="36dp"
+            app:layout_constraintStart_toEndOf="@+id/lastVisitLabel"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.CardView
         android:id="@+id/customerDetailCardView"
@@ -102,7 +108,7 @@
         android:layout_marginEnd="1dp"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastVisitLabel"
+        app:layout_constraintTop_toBottomOf="@+id/lastVisitWrapper"
         card_view:cardElevation="4dp">
 
         <android.support.constraint.ConstraintLayout
@@ -152,7 +158,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
@@ -180,7 +185,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
