--- a/app/src/main/res/layout-w900dp/customer_list.xml
+++ b/app/src/main/res/layout-w900dp/customer_list.xml
@@ -55,6 +55,7 @@
 
     <FrameLayout
         android:id="@+id/customer_detail_container"
+        android:tag="multiPaneCustomerDetail"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3" />
