--- a/app/src/main/res/layout/activity_reward_customers.xml
+++ b/app/src/main/res/layout/activity_reward_customers.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/edit_customer_detail_wrapper"
+    android:id="@+id/reward_customers_wrapper"
     android:layout_height="match_parent"
-    tools:context="co.loystar.loystarbusiness.activities.EditCustomerDetailsActivity">
+    tools:context="co.loystar.loystarbusiness.activities.RewardCustomersActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/edit_customer_detail_toolbar"
+            android:id="@+id/reward_customers_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_edit_customer_details" />
+    <include layout="@layout/content_reward_customers" />
 
 </android.support.design.widget.CoordinatorLayout>
