--- a/app/src/main/res/layout/customer_detail.xml
+++ b/app/src/main/res/layout/customer_detail.xml
@@ -13,9 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:text="@string/mobile_input"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <co.loystar.loystarbusiness.utils.ui.InternationalPhoneInput.InternationalPhoneInput
         android:id="@+id/customerDetailPhone"
@@ -24,24 +25,38 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mobileInputLabel" />
 
-    <TextView
-        android:id="@+id/lastVisitLabel"
+    <android.support.constraint.Guideline
+        android:id="@+id/topGuideLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/last_visit"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/customerDetailPhone" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="75dp" />
 
-    <TextView
-        android:id="@+id/lastVisitValue"
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/lastVisitWrapper"
+        android:visibility="gone"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/lastVisitLabel"
-        app:layout_constraintTop_toTopOf="@+id/lastVisitLabel" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topGuideLine">
+
+        <TextView
+            android:id="@+id/lastVisitLabel"
+            android:text="@string/last_visit"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBaseline_toBaselineOf="@+id/lastVisitValue" />
+
+        <TextView
+            android:id="@+id/lastVisitValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginLeft="36dp"
+            app:layout_constraintStart_toEndOf="@+id/lastVisitLabel"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.CardView
         android:id="@+id/customerDetailCardView"
@@ -52,8 +67,8 @@
         android:layout_marginRight="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastVisitLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lastVisitWrapper"
         card_view:cardElevation="4dp">
 
         <android.support.constraint.ConstraintLayout
@@ -75,7 +90,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
@@ -103,7 +117,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
@@ -131,7 +144,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="0"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
@@ -186,6 +198,5 @@
             app:layout_constraintStart_toEndOf="@+id/messageBtn"
             app:layout_constraintTop_toTopOf="@+id/messageBtn" />
     </android.support.constraint.ConstraintLayout>
-
 
 </android.support.constraint.ConstraintLayout>
