--- a/app/src/main/res/layout/international_phone_input.xml
+++ b/app/src/main/res/layout/international_phone_input.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/prompt_phone"
         android:inputType="phone"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:textColor="@color/disabled_color"/>
 
 </LinearLayout>
