--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="item_space_extra">25dp</dimen>
     <dimen name="item_space_medium">15dp</dimen>
     <dimen name="card_list_padding">16dp</dimen>
+    <dimen name="text_view_label_text_size">16sp</dimen>
     <!-- login -->
     <dimen name="login_button_margin_top">10dp</dimen>
     <dimen name="login_button_margin_bottom">20dp</dimen>
@@ -20,4 +21,5 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="element_spacing_normal">8dp</dimen>
 </resources>
