--- a/app/src/main/res/layout/content_message_broadcast.xml
+++ b/app/src/main/res/layout/content_message_broadcast.xml
@@ -31,8 +31,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="349dp"
-        android:layout_height="157dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/messageBoxWrapper">
 
