--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="element_spacing_normal">8dp</dimen>
+    <dimen name="card_list_title_text_size">20sp</dimen>
 </resources>
