--- a/app/src/main/res/layout/default_loyalty_program_item.xml
+++ b/app/src/main/res/layout/default_loyalty_program_item.xml
@@ -16,8 +16,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/default_program_title"
             android:layout_alignParentTop="true"
-            android:textSize="@dimen/card_list_title_text_size"
-            />
+            android:textSize="18sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"/>
 
         <TextView
             android:layout_marginTop="5dp"
@@ -34,7 +34,8 @@
             android:paddingTop="10dp"
             android:textAlignment="center"
             android:layout_below="@+id/default_program_description"
-            />
+            android:textColor="@color/colorPrimary"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"/>
 
     </RelativeLayout>
 
