--- a/app/src/main/res/layout/activity_authenticator.xml
+++ b/app/src/main/res/layout/activity_authenticator.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/activity_authenticator_toolbar"
             android:layout_width="match_parent"
             android:layout_height="112dp"
             android:minHeight="?android:attr/actionBarSize"
