--- a/app/src/main/res/layout/activity_confirm_password_reset.xml
+++ b/app/src/main/res/layout/activity_confirm_password_reset.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/activity_confirm_password_reset_container"
     android:layout_height="match_parent"
-    android:id="@+id/forgot_password_container"
-    tools:context="co.loystar.loystarbusiness.activities.ForgotPasswordActivity">
+    tools:context="co.loystar.loystarbusiness.activities.ConfirmPasswordResetActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_forgot_password_toolbar"
+            android:id="@+id/activity_confirm_password_reset_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_forgot_password" />
+    <include layout="@layout/content_confirm_password_reset" />
 
 </android.support.design.widget.CoordinatorLayout>
