--- a/app/src/main/res/layout/customer_list.xml
+++ b/app/src/main/res/layout/customer_list.xml
@@ -27,7 +27,7 @@
 
         <ImageView
             android:contentDescription="@string/image"
-            android:id="@+id/welcomeImage"
+            android:id="@+id/stateImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/guideline"
@@ -35,7 +35,7 @@
             app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
-            android:id="@+id/welcomeText"
+            android:id="@+id/stateIntroText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -43,7 +43,7 @@
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcomeImage" />
+            app:layout_constraintTop_toBottomOf="@+id/stateImage" />
 
         <TextView
             android:id="@+id/stateDescriptionText"
@@ -55,7 +55,7 @@
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
+            app:layout_constraintTop_toBottomOf="@+id/stateIntroText" />
 
         <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
             android:id="@+id/stateActionBtn"
