--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="element_spacing_normal">8dp</dimen>
     <dimen name="card_list_title_text_size">20sp</dimen>
+    <dimen name="fab_top_margin">64dp</dimen>
 </resources>
