--- a/app/src/main/res/layout/activity_product_category_list.xml
+++ b/app/src/main/res/layout/activity_product_category_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/activity_product_category_list_container"
     tools:context="co.loystar.loystarbusiness.activities.ProductCategoryListActivity">
 
     <android.support.design.widget.AppBarLayout
