pos in progress.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,4 +59,8 @@
         <item name="fab_colorRipple">@color/light_grey</item>
     </style>
 
+    <style name="Theme.ActionBar.HigherElevation" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="elevation">10dp</item>
+    </style>
+
 </resources>
