--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -23,4 +23,14 @@
         <attr name="formatWithTextFormatter" format="boolean"/>
     </declare-styleable>
 
+
+    <declare-styleable name="IncrementDecrementButton">
+        <attr name="backGroundColor" />
+        <attr name="initialNumber" format="integer"/>
+        <attr name="finalNumber" format="integer" />
+        <attr name="textColor" format="color"/>
+        <attr name="textSize" format="dimension"/>
+        <attr name="backgroundDrawable"/>
+    </declare-styleable>
+
 </resources>
