--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,5 @@
     <dimen name="element_spacing_normal">8dp</dimen>
     <dimen name="card_list_title_text_size">20sp</dimen>
     <dimen name="fab_top_margin">64dp</dimen>
+    <dimen name="badge_text_size">12sp</dimen>
 </resources>
