--- a/app/src/main/res/layout/activity_add_product_category.xml
+++ b/app/src/main/res/layout/activity_add_product_category.xml
@@ -23,7 +23,7 @@
     <include layout="@layout/content_add_product_category" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/activity_add_product_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
