--- a/app/src/main/res/layout/content_sale_without_pos.xml
+++ b/app/src/main/res/layout/content_sale_without_pos.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,4 +8,18 @@
     tools:context="co.loystar.loystarbusiness.activities.SaleWithoutPosActivity"
     tools:showIn="@layout/activity_sale_without_pos">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/activity_sale_without_pos_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
+        android:layout_above="@+id/activity_sale_without_pos_bottom_bar" />
+
+    <com.roughike.bottombar.BottomBar
+        android:id="@+id/activity_sale_without_pos_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        app:bb_tabXmlResource="@xml/bottom_bar_tabs" />
+
+</RelativeLayout>
