--- a/app/src/main/res/layout/customer_detail.xml
+++ b/app/src/main/res/layout/customer_detail.xml
@@ -168,7 +168,7 @@
         app:layout_constraintTop_toBottomOf="@+id/customerDetailCardView">
 
         <Button
-            android:id="@+id/button16"
+            android:id="@+id/sellBtn"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -185,8 +185,8 @@
             android:text="@string/message"
             app:layout_constraintEnd_toStartOf="@+id/redeemBtn"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button16"
-            app:layout_constraintTop_toTopOf="@+id/button16" />
+            app:layout_constraintStart_toEndOf="@+id/sellBtn"
+            app:layout_constraintTop_toTopOf="@+id/sellBtn" />
 
         <Button
             android:id="@+id/redeemBtn"
