--- a/app/src/main/res/layout-w900dp/loyalty_program_list.xml
+++ b/app/src/main/res/layout-w900dp/loyalty_program_list.xml
@@ -113,6 +113,7 @@
 
     <FrameLayout
         android:id="@+id/loyalty_program_detail_container"
+        android:tag="multiPaneLoyaltyDetail"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3" />
