--- a/app/src/main/res/layout/order_summary_bottom_sheet.xml
+++ b/app/src/main/res/layout/order_summary_bottom_sheet.xml
@@ -47,7 +47,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/customerDetailWrapper"
             android:layout_width="match_parent"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
@@ -57,8 +57,8 @@
                 android:id="@+id/customerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBaseline_toBaselineOf="@+id/changeCustomerBtn"
-                app:layout_constraintHorizontal_bias="0.5"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/customerNumber"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <Button
@@ -67,7 +67,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/change_customer"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,8 +74,8 @@
                 android:id="@+id/customerNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/customerName" />
+                app:layout_constraintTop_toBottomOf="@+id/changeCustomerBtn"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
 
         </android.support.constraint.ConstraintLayout>
