fixes for phone input.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -35,4 +35,8 @@
     <declare-styleable name="CartCountButton">
         <attr name="backGroundColor" />
     </declare-styleable>
+
+    <declare-styleable name="BrandButtonTransparent">
+        <attr name="backgroundDrawable"/>
+    </declare-styleable>
 </resources>
