--- a/app/src/main/res/layout/content_transactions_confirmation.xml
+++ b/app/src/main/res/layout/content_transactions_confirmation.xml
@@ -72,7 +72,7 @@
             android:layout_gravity="center_horizontal"
             android:textAppearance="?android:textAppearanceMedium" />
 
-        <co.loystar.loystarbusiness.utils.ui.buttons.PrintButton
+        <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonTransparent
             android:id="@+id/printReceipt"
             android:visibility="gone"
             android:layout_marginTop="20dp"
@@ -82,6 +82,7 @@
             android:paddingStart="10dp"
             android:paddingLeft="10dp"
             android:paddingEnd="10dp"
+            app:backgroundDrawable="@drawable/ic_print_white_24dp"
             android:paddingRight="10dp"/>
     </LinearLayout>
 
