--- a/app/src/main/res/layout/content_add_new_customer.xml
+++ b/app/src/main/res/layout/content_add_new_customer.xml
@@ -186,7 +186,7 @@
             android:id="@+id/add_customer_manually_bloc"
             android:layout_height="wrap_content">
 
-            <LinearLayout
+            <View
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:layout_width="0px"
@@ -303,7 +303,7 @@
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp">
