--- a/app/src/main/res/layout/content_edit_customer_details.xml
+++ b/app/src/main/res/layout/content_edit_customer_details.xml
@@ -125,7 +125,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="10dp"
