--- a/app/src/main/res/menu/merchant_back_office.xml
+++ b/app/src/main/res/menu/merchant_back_office.xml
@@ -13,4 +13,10 @@
         android:title="@string/action_settings"
         android:icon="@drawable/ic_settings_white_24px"
         app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_search"
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_search_white_48px"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
